Minor font spacing fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -170,7 +170,7 @@ h3{
     line-height: 32px;
     color: $mainBlue;
     font-family: 'alrightRegular';
-    letter-spacing: -0.4px;
+    letter-spacing: -0.2px;
     margin: 48px 0px 10px 0px;
     text-align: center;
     font-weight: 600;
